# bazel8_go

./: .bazelignore  .bazelrc  .bazelrc.org  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  coverage.html  go.mod  go.sum
.github/workflows/: test.yml
.ijwb/aspects/: BUILD.bazel  cc_info.bzl  code_generator_info.bzl  intellij_info_bundled.bzl  intellij_info_impl_bundled.bzl  java_info.bzl  python_info.bzl
DOCS/: COVERAGE.md  README.md
cmd/: BUILD.bazel  README.md  doc.go  integration_test.go  main.go  main_test.go
coverage-reports/: README.md  test-coverage-summary.md
coverage-reports/bazel/: README.md  cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage-reports/bazel/cmd/: index.html  main.go.gcov.html
coverage-reports/bazel/greeting/: greeting.go.gcov.html  index.html
coverage-reports/bazel/logger/: index.html  logger.go.gcov.html
coverage-reports/bazel/pkg/greeting/: greeting.go.gcov.html  index.html
coverage-reports/bazel/pkg/logger/: index.html  logger.go.gcov.html
coverage-reports/go/: README.md  index.html
pkg/: README.md
pkg/greeting/: BUILD.bazel  README.md  doc.go  greeting.go  greeting_test.go  greeting_test.go.new
pkg/logger/: BUILD.bazel  README.md  doc.go  logger.go  logger_test.go
tools/: README.md  apply_updates.sh  install_lcov.sh  run_coverage.sh
