module(
    name = "bazel8_go",
    version = "v1.0.0",
)

# Go dependencies
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

# Go SDK configuration
# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
use_repo(go_sdk, "go_toolchains")

# Go dependencies configuration
# The go_deps extension parses the go.mod file directly, so external tooling
# such as gazelle update-repos is no longer needed.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_dustin_go_humanize",
    "com_github_stretchr_testify",
)
