load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "main.go",
    ],
    importpath = "github.com/abitofhelp/bazel8_go/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/greeting:go_default_library",
        "//pkg/logger:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "integration_test.go",
        "main_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/greeting:go_default_library",
        "//pkg/logger:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
