#
# Description:
# The final form of the BUILD file accessed at runtime as an external WORKSPACE.
#

load(":flag_hack.bzl", "define_flag_hack")

licenses(["notice"])  # Apache 2.0

exports_files([
    "tools/PackageParser_deploy.jar",
    "tools/CreateAar_deploy.jar",
    "tools/JarFilter_deploy.jar",
])

define_flag_hack()
