load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "logger.go",
    ],
    importpath = "github.com/abitofhelp/bazel8_go/pkg/logger",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["logger_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
